# rt

./: .gitignore  Cargo.toml  README.md
.Codex/: settings.json
.github/workflows/: ci.yml  release.yml
Formula/: rt.rb
scripts/: check-release-version.sh  release-smoke.sh  release.sh  update-homebrew.sh
skills/rt/: SKILL.md  reference.md
src/: args.rs  cache.rs  cli.rs  error.rs  harness.rb  main.rs  metadata.rs  output.rs  project.rs  ruby.rs  run_result.rs  runner.rs  tool_catalog.rs
tasks/: greet.rb
tests/: e2e.rs
tests/fixtures/basic/.rt/tasks/: errors.rb  greet.rb
tests/fixtures/basic/tasks/: greet.rb
tests/fixtures/broken/.rt/tasks/: broken.rb  exits_on_load.rb  ok.rb
tests/fixtures/broken/tasks/: broken.rb  ok.rb
tests/fixtures/gems/.rt/tasks/: badreq.rb  bundled.rb  missing.rb  plain.rb
tests/fixtures/gems/tasks/: badreq.rb  bundled.rb  plain.rb
tests/fixtures/gems_dummy/.rt/tasks/: dummy.rb
tests/fixtures/gems_real/.rt/tasks/: paint.rb
tests/fixtures/gems_toplevel/.rt/tasks/: bad.rb
tests/fixtures/gems_toplevel/tasks/: bad.rb
tests/fixtures/global/tasks/: global.rb
tests/fixtures/invalid/.rt/tasks/: declarations.rb
tests/fixtures/invalid_requirements/.rt/tasks/: rails_gem.rb  requirements.rb
tests/fixtures/nested/.rt/tasks/: hello.rb
tests/fixtures/params/.rt/tasks/: deploy.rb
tests/fixtures/params/tasks/: deploy.rb
tests/fixtures/rails/.rt/tasks/: rails.rb
tests/fixtures/rails/config/: environment.rb
tests/fixtures/rails_real/: Gemfile
tests/fixtures/rails_real/config/: application.rb
(+1 files in other folders)
