[package]
name = "rt"
version = "0.0.3"
edition = "2021"
description = "A task runner that turns Ruby scripts into a discoverable CLI for humans and agents"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
